Fixed: ratethisfest.appspot.com was not showing 'CHOOSE YOUR FEST' option and showed a broken fest view composite instead
Added:
'CHOOSE YOUR FEST' screen has a small bit of info about ratethisfest

[Lollapaloozer]ViewComposite allows selection of year to view ratings
[Lollapaloozer]ViewComposite refactored dropdown event handlers

[Lollapaloozer]RateComposite GWT dialog button click event refactored out
of the main class
[Lollapaloozer]RateComposite properly redirects to Facebook/Twitter login
start if user is not logged in

--- a/Coacheller-AppEngine/src/com/ratethisfest/client/Coacheller.css
+++ b/Coacheller-AppEngine/src/com/ratethisfest/client/Coacheller.css
@@ -15,6 +15,21 @@ a:hover {
 	margin-bottom: 6px;
 }
 
+
+.headerNotBold {
+	font-size: 24px;
+	color: black;
+	margin-bottom: 6px;
+}
+
+
+.headerBoldItalic {
+	font-weight: bold;
+	font-size: 24px;
+	color: black;
+	margin-bottom: 6px;
+}
+
 .header_mobile {
 	font-weight: bold;
 	font-size: 16px;
